--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -201,15 +201,15 @@ This page presents a documentation for Media Library, including the following op
 <table>
   <tr>
     <th>URL</th>
-    <td>/dashboard/{id}</td>
+    <td colspan="2">/dashboard/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Page with a modal to view latest events, the users projects and tasks.</td>
+    <td colspan="2">Page with a modal to view latest events, the users projects and tasks.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -218,11 +218,11 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui07-dashboard">UI05</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui07-dashboard">UI05</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -346,11 +346,11 @@ This page presents a documentation for Media Library, including the following op
 <table>
   <tr>
     <th>URL</th>
-    <td>/dashboard_my_projectss/{id}/{idProject}/tasks</td>
+    <td colspan="2">/dashboard_my_projectss/{id}/{idProject}/tasks</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Shows user's tasks.</td>
+    <td colspan="2">Shows user's tasks.</td>
   </tr>
   <tr>
     <th>Method</th>
@@ -367,11 +367,11 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <td> --TODO-- </td>
+    <td colspan="2"> --TODO-- </td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
