SearchEngine, Admin and Authentication and Individual Profile modules :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -65,9 +65,9 @@ This page presents a documentation for Media Library, including the following op
 - R103: Logout Action ```/``` <!-- TODO -->
 - R104: Register Modal ```/``` <!-- TODO -->
 - R105: Register Action ```/``` <!-- TODO -->
-- R106: View Profile ```/profile```
+- R106: View Profile ```/profile/{id}```
 - R107: Edit Profile Modal ```/profile```
-- R108: Edit Profile Action ```/profile``` <!-- TODO -->
+- R108: Edit Profile Action ```/profile/edit/{id}``` <!-- TODO -->
 
 #### R101: Login Modal
 <table>
@@ -81,7 +81,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Method</th>
-    <td>  </td>
+    <td>GET</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -98,8 +98,69 @@ This page presents a documentation for Media Library, including the following op
 </table>
 
 #### R102: Login Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that allows user to log in.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+username/email: string</td>
+    <td>Username/Email</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+password: string</td>
+    <td>Password</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R201</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
 
 #### R103: Logout Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that logs out the authenticated user.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>USR</td>
+  </tr>
+</table>
 
 #### R104: Register Modal
 <table>
@@ -113,7 +174,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Method</th>
-    <td>  </td>
+    <td>GET</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -130,12 +191,75 @@ This page presents a documentation for Media Library, including the following op
 </table>
 
 #### R105: Register Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that inserts the user into the system. Redirects to the user profile page on success and the register form on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+fullname: string</td>
+    <td>Full Name</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+username: string</td>
+    <td>Username</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+email: string</td>
+    <td>Email</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+password: string</td>
+    <td>Password</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+repeatpassword: string</td>
+    <td>Repeat Password</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+company: string</td>
+    <td>Company</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+birthday: date</td>
+    <td>Birthday</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R201</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
 
 #### R106: View Profile
 <table>
   <tr>
     <th>URL</th>
-    <td>/profile</td>
+    <td>/profile/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -143,11 +267,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Method</th>
-    <td>  </td>
+    <td>GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>  </td>
+    <td>+id:integer</td>
+    <td>User Primary Key</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -163,7 +288,7 @@ This page presents a documentation for Media Library, including the following op
 <table>
   <tr>
     <th>URL</th>
-    <td>/</td>
+    <td>/profile/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -171,7 +296,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Method</th>
-    <td>  </td>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+id:integer</td>
+    <td>User Primary Key</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -188,16 +318,84 @@ This page presents a documentation for Media Library, including the following op
 </table>
 
 #### R108: Edit Profile Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/profile/edit/{id}</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that changes user profile info based on the input received. Redirects to the user profile on success and edit profile page on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+fullname: string</td>
+    <td>Full Name</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+username: string</td>
+    <td>Username</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+email: string</td>
+    <td>Email</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+password: string</td>
+    <td>Password</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+repeatpassword: string</td>
+    <td>Repeat Password</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+company: string</td>
+    <td>Company</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+birthday: date</td>
+    <td>Birthday</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+picture: picture</td>
+    <td>Profile Picture</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R106</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R107</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
 
 ### 3.2 Module M02: Dashboard
 
 #### Endpoints of Module Dashboard
 
-- R201: Dashboard Modal```/dashboard/{id}```
-- R202: View Projects ```/dashboard_my_projects/{id}``` 
-- R203: View Tasks ```/dashboard_tasks/{id}``` 
+- R201: Dashboard Page```/dashboard/{id}```
+- R202: View Projects ```/dashboard_my_projects/{id}```
+- R203: View Tasks ```/dashboard_tasks/{id}```
 
-#### R201: Event Modal
+#### R201: Dashboard Page
 <table>
   <tr>
     <th>URL</th>
@@ -375,18 +573,395 @@ This page presents a documentation for Media Library, including the following op
   </tr>
 </table>
 
-### 3.4 Module M04: Administration
+### 3.4 Module M04: Search Engine
 
-- R401: Admin Login Form ```/admin```
-- R402: Admin Login Action ```/admin```
-- R403: View Projects ```/admin/projects```
-- R404: Edit Projects Form ```/admin/projects/edit```
-- R405: Edit Projects Action ```/admin/projects/edit```
-- R406: Remove Projects Action ```/admin/projects```
-- R407: View Users ```/admin/users```
-- R408: Edit Users Form ```/admin/users/edit```
-- R409: Edit Users Action ```/admin/users/edit```
-- R4010: Remove Users Action ```/admin/users```
+- R401: Search Projects Action ```/search_projects```
+- R402: Search Users Action ```/search_users```
+- R403: Search Tasks Action ```/search_tasks```
+
+#### R401: Search Projects Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/search_projects</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows projects's search.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui21-search-by-projects">UI21</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+#### R402: Search Users Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/search_users</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows users's search.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>User Name</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui22-search-by-users">UI22</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+#### R403: Search Tasks Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/search_tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows tasks's search.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>?title: string</td>
+    <td>Task Name</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui23-search-by-tasks">UI23</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR, VIS</td>
+  </tr>
+</table>
+
+### 3.5 Module M05: Administration
+
+- R501: Admin Login Form ```/admin```
+- R502: Admin Login Action ```/admin```
+- R503: View Projects ```/admin/projects```
+- R504: Edit Project Modal ```/admin/projects/```
+- R505: Edit Project Action ```/admin/projects/edit```
+- R506: Remove Project Action ```/admin/projects/remove```
+- R507: View Users ```/admin/users```
+- R508: Edit User Modal ```/admin/users/```
+- R509: Edit User Action ```/admin/users/edit```
+- R510: Remove User Action ```/admin/users/remove```
+
+#### R501: Admin Login Form
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a form to login to a website administrator account.</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui24-administration-log-in">UI24</a></td>
+  </tr>
+  <tr>
+    <th>SUBMIT</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R502</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R502: Admin Login Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that allows to login to a website administrator account.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+username/email: string</td>
+    <td>Username/Email</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>+password: string</td>
+    <td>Password</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R501</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R503: View Projects
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/projects</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with information about all projects.</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R504: Edit Project Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/projects/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to edit information about one project.</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <!-- <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a></td> -->
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R505: Edit Project Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/projects/edit/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that edits information about one project.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+id: integer</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R506: Remove Project Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/projects/remove</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that removes one project.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+id: integer</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R507: View Users
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/users</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with information about all users.</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui26-administration-manage-users">UI26</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R508: Edit User Modal
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/users/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Page with a modal to edit information about one user.</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <!-- <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a></td> -->
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R509: Edit User Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/users/edit/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that edits information about one user.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+id: integer</td>
+    <td>User Primary Key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">507</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
+
+#### R510: Remove User Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/admin/users/remove</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Action that removes one user.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>POST</td>
+  </tr>
+  <tr>
+    <th>Request Body</th>
+    <td>+id: integer</td>
+    <td>User Primary Key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>ADM</td>
+  </tr>
+</table>
 
 
 #### Endpoints of Module Projects and Project Settings
