fixed links and started JSON examples :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -89,7 +89,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R102</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-login-action">R102</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -123,12 +123,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R201</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r201-dashboard-page">R201</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-modal">R101</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -153,7 +153,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-modal">R101</a></td>
     <td>Success</td>
   </tr>
   <tr>
@@ -182,7 +182,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R105</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r105-register-action">R105</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -241,12 +241,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R201</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r201-dashboard-page">R201</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R101</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-register-modal">R104</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -309,7 +309,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R108</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r108-edit-profile-action">R108</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -373,12 +373,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R106</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r106-view-profile">R106</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R107</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r107-edit-profile-modal">R107</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -416,7 +416,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui07-dashboard">UI05</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui07-dashboard">UI07</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -474,7 +474,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui09-dashboard-my-tasks">UI08</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui09-dashboard-my-tasks">UI09</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -603,6 +603,10 @@ This page presents a documentation for Media Library, including the following op
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui21-search-by-projects">UI21</a></td>
   </tr>
   <tr>
+    <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON401</a></td>
+  </tr>
+  <tr>
     <th>Permissions</th>
     <td colspan="2">USR, VIS</td>
   </tr>
@@ -632,6 +636,10 @@ This page presents a documentation for Media Library, including the following op
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui22-search-by-users">UI22</a></td>
   </tr>
   <tr>
+    <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON402</a></td>
+  </tr>
+  <tr>
     <th>Permissions</th>
     <td colspan="2">USR, VIS</td>
   </tr>
@@ -659,6 +667,10 @@ This page presents a documentation for Media Library, including the following op
   <tr>
     <th>UI</th>
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui23-search-by-tasks">UI23</a></td>
+  </tr>
+  <tr>
+    <th>AJAX Calls</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON403</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -695,7 +707,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R502</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r502-admin-login-action">R502</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -729,12 +741,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R501</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r501-admin-login-form">R501</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -775,7 +787,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <!-- <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a></td> -->
+    <td><!-- <a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a>--></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -804,12 +816,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r504-edit-project-modal">R504</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -839,12 +851,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R503</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects">R503</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -885,7 +897,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>UI</th>
-    <!-- <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a></td> -->
+    <td><!-- <a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui25-administration-manage-projects">UI25</a>--></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -914,12 +926,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r508-edit-user-modal">R508</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -949,12 +961,12 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">R507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
     <td>Error</td>
   </tr>
   <tr>
@@ -963,12 +975,29 @@ This page presents a documentation for Media Library, including the following op
   </tr>
 </table>
 
-
-#### Endpoints of Module Projects and Project Settings
-
 ## 4. JSON/XML Types
 
 > Document the JSON or XML responses that will be used by the web resources.
+
+#### JSON401: Search Projects: {projects}[]
+```
+{
+  "projects": [
+    {
+      "id": "2",
+      "name": "Treeflex",
+      "private": "true",
+      "creationDate": "2017-03-03",
+      "owner": "Betsey Elliker",
+      "numberMembers" : "4",
+      "numberTasks" : "1"
+    },
+  ]
+}
+```
+#### JSON402: Search Users: {users}[]
+
+#### JSON403: Search Tasks: {tasks}[]
 
 ## Web resources descriptors <note important>Do not include on the final artefact</note>
 
