links :ambulance: Static Pages :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -604,7 +604,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>AJAX Calls</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON401</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json401-search-projects-projects">JSON401</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -637,7 +637,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>AJAX Calls</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON402</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json402-search-users-users">JSON402</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -670,7 +670,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>AJAX Calls</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#">JSON403</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json403-search-tasks-tasks">JSON403</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -926,7 +926,7 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
     <td>Success</td>
   </tr>
   <tr>
@@ -961,17 +961,120 @@ This page presents a documentation for Media Library, including the following op
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
     <td>Success</td>
   </tr>
   <tr>
     <th></th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">507</a></td>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r507-view-users">R507</a></td>
     <td>Error</td>
   </tr>
   <tr>
     <th>Permissions</th>
     <td>ADM</td>
+  </tr>
+</table>
+
+### 3.6 Module M06: Static Pages
+
+- R501: About Page ```/about```
+- R502: Contact Page ```/contact```
+- R503: FAQ Page ```/faq```
+- R504: 404 ```/```
+
+#### R601: About Page
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/about</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>About Page.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui03-about">UI03</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R602: Contact Page
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/contact</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>Contact Page.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui04-contact">UI04</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R603: FAQ Page
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/faq</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>FAQ Page.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui02-faq">UI02</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
+  </tr>
+</table>
+
+#### R604: 404
+<table>
+  <tr>
+    <th>URL</th>
+    <td>/</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td>404 Page.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td>GET</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui27-error-page">UI27</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td>VIS</td>
   </tr>
 </table>
 
