--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1083,7 +1083,7 @@ This page presents a documentation for Media Library, including the following op
 > Document the JSON or XML responses that will be used by the web resources.
 
 #### JSON401: Search Projects: {projects}[]
-```
+```javascript
 {
   "projects": [
     {
