complete JSON ajax calls :pencil2:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1098,9 +1098,41 @@ This page presents a documentation for Media Library, including the following op
   ]
 }
 ```
+
 #### JSON402: Search Users: {users}[]
+```javascript
+{
+  "users": [
+    {
+      "id": "1",
+      "username": "pputman0",
+      "name": "Pincus Putman",
+      "premium": "true",
+      "email": "pputman0@usnews.com",
+      "country": "United Arab Emirates",
+      "numberProjects" : "1",
+      "numberTasksAssigned" : "1"
+    },
+  ]
+}
+```
 
 #### JSON403: Search Tasks: {tasks}[]
+```javascript
+{
+  "tasks": [
+    {
+      "id": "3",
+      "title": "Face to face foreground migration",
+      "userAssigned": "pfiggs2",
+      "creationDate": "2017-06-29",
+      "deadline": "2018-05-20",
+      "completed": "false",
+      "Project" : "Sub-Ex",
+    },
+  ]
+}
+```
 
 ## Web resources descriptors <note important>Do not include on the final artefact</note>
 
