Modules table :pencil2: :gem:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1,15 +1,31 @@
 # A7: High-level architecture. Privileges. Web resources specification
 
 The architecture of the web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses.
-This page presents a documentation for Media Library, including the following operations over data: create, read, update, and delete.
 
 ## 1. Overview
+<!-- > Identify and overview the modules that will be part of the application. -->
 
-> Identify and overview the modules that will be part of the application.
+<table>
+  <tr>
+    <th>M01: </th>
+    <td>Visitor</td>
+  </tr>
+  <tr>
+    <th>M02</th>
+    <td>Authenticated User</td>
+  </tr>
+  <tr>
+    <th>M03</th>
+    <td>Premium Authenticated User</td>
+  </tr>
+  <tr>
+    <th>M04</th>
+    <td>Project Member</td>
+  </tr>
+</table>
 
 ## 2. Permissions
-
-> Define the permissions used by each module, necessary to access its data and features.
+<!-- > Define the permissions used by each module, necessary to access its data and features. -->
 
 <table>
   <tr>
@@ -50,11 +66,10 @@ This page presents a documentation for Media Library, including the following op
 </table>
 
 ## 3. Modules
-
-> Web resources organized by module
+<!-- > Web resources organized by module
 > Document and describe the web resources associated with each module, indicating the URL, HTTP method, request parameters and response.
 > Follow the RESTful resource naming
-> At the end of this page is presented some usual descriptors to document the web resources.
+> At the end of this page is presented some usual descriptors to document the web resources. -->
 
 ### 3.1 Module M01: Authentication and Individual Profile
 
@@ -1133,8 +1148,7 @@ This page presents a documentation for Media Library, including the following op
   ]
 }
 ```
-
-## Web resources descriptors <note important>Do not include on the final artefact</note>
+<!-- ## Web resources descriptors <note important>Do not include on the final artefact</note>
 
   * URL - Resource identifier, following the RESTful resource naming conventions
   * Description - Describe the resource, when it's used and why
@@ -1145,17 +1159,17 @@ This page presents a documentation for Media Library, including the following op
   * Request Body - Data associated and transmitted with each request
   * Returns - HTTP code returned from a request
   * Response Body - Data sent from the server, in response to a given request
-  * Permissions - Required permissions to access the resource
+  * Permissions - Required permissions to access the resource -->
 
-<!-- ## Revision history
-
+<!-- ***
+## Revision history
 Changes made to the first submission:
 1. Item 1
 1. Item 2 -->
 
 ***
 
-GROUP1743, xx/xx/2018
+GROUP1743, 08/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
